Thu Nov  7 11:14:16 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/Makefile.am src/odbc/prepare_query.c src/odbc/native.c:
	- split prepare_call in native.c (indented)

Thu Nov  7 11:01:30 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/mem.c:
	- small namespace cleanup

Wed Nov  6 12:23:59 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* src/ctlib/unittests/t0009.c src/dblib/unittests/t0001.c
	  src/dblib/unittests/t0005.c src/dblib/unittests/t0006.c
	  src/dblib/unittests/t0012.c src/dblib/unittests/t0013.c
	  src/dblib/unittests/t0014.c src/dblib/unittests/t0015.c
	  src/dblib/unittests/t0016.c src/dblib/unittests/t0017.c
	  src/dblib/unittests/t0018.c src/dblib/unittests/t0020.c
	  src/dblib/unittests/t0023.c:
	- Don't enable TDS logging by default in unit tests.

Wed Nov  6 12:21:36 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/unittests/t0007.c src/tds/unittests/t0008.c:
	- Fix shadow warnings.

Wed Nov  6 11:58:40 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/unittests/Makefile.am src/dblib/unittests/common.c
	  src/dblib/unittests/common.h src/dblib/unittests/t0001.c
	  src/dblib/unittests/t0002.c src/dblib/unittests/t0003.c
	  src/dblib/unittests/t0004.c src/dblib/unittests/t0005.c
	  src/dblib/unittests/t0006.c src/dblib/unittests/t0007.c
	  src/dblib/unittests/t0008.c src/dblib/unittests/t0009.c
	  src/dblib/unittests/t0010.c src/dblib/unittests/t0012.c
	  src/dblib/unittests/t0013.c src/dblib/unittests/t0014.c
	  src/dblib/unittests/t0015.c src/dblib/unittests/t0016.c
	  src/dblib/unittests/t0017.c src/dblib/unittests/t0018.c
	  src/dblib/unittests/t0020.c src/dblib/unittests/t0021.c
	  src/dblib/unittests/t0022.c src/dblib/unittests/t0023.c:
	- Factor out malloc_options code into a function in common.c.

Wed Nov  6 11:43:51 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* include/ctpublic.h include/sybdb.h src/ctlib/ct.c src/dblib/bcp.c
	  src/dblib/dblib.c: